--- a/include/biblio.bib
+++ b/include/biblio.bib
@@ -1,62 +1,108 @@
+@book{deisenrothMathematicsMachineLearning2020,
+  title = {Mathematics for {{Machine Learning}}},
+  author = {Deisenroth, Marc Peter and Faisal, A. Aldo and Ong, Cheng Soon},
+  year = {2020},
+  month = feb,
+  edition = {1},
+  publisher = {Cambridge University Press},
+  doi = {10.1017/9781108679930},
+  urldate = {2025-05-28},
+  copyright = {https://www.cambridge.org/core/terms},
+  isbn = {978-1-108-67993-0 978-1-108-47004-9 978-1-108-45514-5},
+  file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Deisenroth et al. - 2020 - Mathematics for Machine Learning.pdf}
+}
+
+@book{grifoneAlgebreLineaire2024,
+  title = {{Alg{\`e}bre Lin{\'e}aire}},
+  author = {Grifone, Joseph},
+  year = {2024},
+  edition = {7e edition},
+  publisher = {CEPADUES},
+  address = {Toulouse},
+  abstract = {Cet ouvrage de r{\'e}f{\'e}rence pr{\'e}sente un cours complet d'alg{\`e}bre lin{\'e}aire recouvrant les programmes du premier cycle des Universit{\'e}s et des Classes Pr{\'e}paratoires. L'alg{\`e}bre lin{\'e}aire a sans doute une place sp{\'e}ciale parmi les disciplines enseign{\'e}es en premier cycle. - D'une part parce qu'elle est utilis{\'e}e pratiquement dans toutes les branches scientifiques : la physique, l'{\'e}conomie, la chimie, l'informatique... Sa connaissance fait partie du bagage indispensable au futur chercheur, ing{\'e}nieur ou agr{\'e}gatif. - D'autre part en vertu de son caract{\`e}re p{\'e}dagogique, car l'alg{\`e}bre et la g{\'e}om{\'e}trie se m{\^e}lent constamment et l'imagination est sans cesse sollicit{\'e}e. L'auteur s'est efforc{\'e} de r{\'e}diger un ouvrage qui, sans sacrifier {\`a} la rigueur, pr{\'e}sente les diff{\'e}rents sujets avec clart{\'e} et simplicit{\'e}.},
+  isbn = {978-2-38395-134-6},
+  langid = {french},
+  keywords = {/unread},
+  file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Grifone - 2024 - Algèbre Linéaire.pdf}
+}
+
 @book{hastieElementsStatisticalLearning2009,
   title = {The {{Elements}} of {{Statistical Learning}}},
   author = {Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome},
-  date = {2009},
+  year = {2009},
   series = {Springer {{Series}} in {{Statistics}}},
   publisher = {Springer},
-  location = {New York, NY},
+  address = {New York, NY},
   doi = {10.1007/978-0-387-84858-7},
-  url = {http://link.springer.com/10.1007/978-0-387-84858-7},
   urldate = {2023-07-07},
   isbn = {978-0-387-84857-0 978-0-387-84858-7},
   keywords = {statistics},
+  file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Springer/2009/Hastie et al_2009_The Elements of Statistical Learning.pdf;/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Springer/2009/Hastie et al_2009_The Elements of Statistical Learning2.pdf}
+}
+
+@article{hotellingAnalysisComplexStatistical1933,
+  title = {Analysis of a Complex of Statistical Variables into Principal Components},
+  author = {Hotelling, H.},
+  year = {1933},
+  journal = {Journal of Educational Psychology},
+  volume = {24},
+  number = {6},
+  pages = {417--441},
+  publisher = {Warwick \& York},
+  address = {US},
+  issn = {1939-2176},
+  doi = {10.1037/h0071325},
+  abstract = {The problem is stated in detail, a method of analysis is derived and its geometrical meaning shown, methods of solution are illustrated and certain derivative problems are discussed. (To be concluded in October issue.) (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  keywords = {/unread,Statistical Analysis,Statistical Variables},
+  file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Hotelling - 1933 - Analysis of a complex of statistical variables into principal components 1.pdf;/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Hotelling - 1933 - Analysis of a complex of statistical variables into principal components.pdf;/Users/steven/Zotero/storage/Z5KSI3CE/1934-00645-001.html}
 }
 
 @book{jamesIntroductionStatisticalLearning2021,
   title = {An {{Introduction}} to {{Statistical Learning}}: With {{Applications}} in {{R}}},
   shorttitle = {An {{Introduction}} to {{Statistical Learning}}},
   author = {James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
-  date = {2021},
+  year = {2021},
   series = {Springer {{Texts}} in {{Statistics}}},
   publisher = {Springer US},
-  location = {New York, NY},
+  address = {New York, NY},
   doi = {10.1007/978-1-0716-1418-1},
-  url = {https://link.springer.com/10.1007/978-1-0716-1418-1},
   urldate = {2024-06-13},
+  copyright = {https://www.springer.com/tdm},
   isbn = {978-1-0716-1417-4 978-1-0716-1418-1},
   langid = {english},
   keywords = {r-software,statistics},
+  file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Springer US/2021/James et al_2021_An Introduction to Statistical Learning2.pdf}
 }
 
 @inproceedings{leclercqTASTEApproachGeneral1993,
   title = {The {{TASTE Approach}}: {{General Implicit Solutions}} in {{Multiple Choice Questions}} ({{MCQs}}), {{Open Books Exams}} and {{Interactive Testing}}},
   shorttitle = {The {{TASTE Approach}}},
   booktitle = {Item {{Banking}}: {{Interactive Testing}} and {{Self-Assessment}}},
-  author = {Leclercq, D. and Boxus, E. and family=Brogniez, given=P., prefix=de, useprefix=true and Wuidar, H. and Lambert, F.},
-  editor = {Leclercq, Dieudonnè A. and Bruno, James E.},
-  date = {1993},
+  author = {Leclercq, D. and Boxus, E. and {de Brogniez}, P. and Wuidar, H. and Lambert, F.},
+  editor = {Leclercq, Dieudonn{\`e} A. and Bruno, James E.},
+  year = {1993},
   pages = {210--232},
   publisher = {Springer},
-  location = {Berlin, Heidelberg},
+  address = {Berlin, Heidelberg},
   doi = {10.1007/978-3-642-58033-8_17},
   abstract = {The efficiency of school to efficiently train in higher order cognitive skills is sometimes questioned. Principles and techniques (such as open books exams, implicit questioning, self assessment) have been developed to enhance cognitive vigilance, data processing skills and metacognition. The details of those techniques are provided as well as some results about question characteristics and Student opinions. Further developments are considered and perspectivized with ambitious training and assessment goals.},
   isbn = {978-3-642-58033-8},
   langid = {english},
+  file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Leclercq et al. - 1993 - The TASTE Approach General Implicit Solutions in Multiple Choice Questions (MCQs), Open Books Exams.pdf}
 }
-@journalArticle{hotellingAnalysisComplexStatistical1933,
-  libraryCatalog = {APA PsycNet},
-  year = {1933},
-  date = {1933-00-00 1933},
-  pages = {417-441},
-  DOI = {10.1037/h0071325},
-  publicationTitle = {Journal of Educational Psychology},
-  ISSN = {1939-2176},
-  author = {Hotelling, H.},
-  title = {Analysis of a complex of statistical variables into principal components},
-  extra = {Place: US
-Publisher: Warwick & York},
-  issue = {6},
-  key = {RAP8FFXK},
-  abstractNote = {The problem is stated in detail, a method of analysis is derived and its geometrical meaning shown, methods of solution are illustrated and certain derivative problems are discussed. (To be concluded in October issue.) (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
-  volume = {24},
+
+@book{mcelreathStatisticalRethinkingBayesian2020,
+  title = {Statistical {{Rethinking}}: {{A Bayesian Course}} with {{Examples}} in {{R}} and {{STAN}}},
+  shorttitle = {Statistical {{Rethinking}}},
+  author = {McElreath, Richard},
+  year = {2020},
+  month = mar,
+  edition = {2},
+  publisher = {{Chapman and Hall/CRC}},
+  address = {New York},
+  doi = {10.1201/9780429029608},
+  abstract = {Statistical Rethinking: A Bayesian Course with Examples in R and Stan builds your knowledge of and confidence in making inferences from data. Reflecting the need for scripting in today's model-based statistics, the book pushes you to perform step-by-step calculations that are usually automated. This unique computational approach ensures that you understand enough of the details to make reasonable choices and interpretations in your own modeling work. The text presents causal inference and generalized linear multilevel models from a simple Bayesian perspective that builds on information theory and maximum entropy. The core material ranges from the basics of regression to advanced multilevel models. It also presents measurement error, missing data, and Gaussian process models for spatial and phylogenetic confounding. The second edition emphasizes the directed acyclic graph (DAG) approach to causal inference, integrating DAGs into many examples. The new edition also contains new material on the design of prior distributions, splines, ordered categorical predictors, social relations models, cross-validation, importance sampling, instrumental variables, and Hamiltonian Monte Carlo. It ends with an entirely new chapter that goes beyond generalized linear modeling, showing how domain-specific scientific models can be built into statistical analyses. Features Integrates working code into the main text Illustrates concepts through worked data analysis examples Emphasizes understanding assumptions and how assumptions are reflected in code Offers more detailed explanations of the mathematics in optional sections Presents examples of using the dagitty R package to analyze causal graphs Provides the rethinking R package on the author's website and on GitHub},
+  isbn = {978-0-429-02960-8},
+  keywords = {bayesian-analysis},
+  file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Chapman and Hall/CRC/2020/McElreath_2020_Statistical Rethinking.pdf}
 }
