--- a/include/biblio.bib
+++ b/include/biblio.bib
@@ -12,6 +12,19 @@
   file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Deisenroth et al. - 2020 - Mathematics for Machine Learning.pdf}
 }
 
+@book{delmasIntroductionAuCalcul2013,
+  title = {{Introduction au calcul des probabilit{\'e}s et {\`a} la statistique : exercices, probl{\`e}mes et corrections (2e {\'e}dition)}},
+  shorttitle = {{Introduction au calcul des probabilit{\'e}s et {\`a} la statistique}},
+  author = {Delmas, Jean-Fran{\c c}ois},
+  year = {2013},
+  pages = {416},
+  publisher = {Les Presses de l'ENSTA},
+  urldate = {2025-05-30},
+  abstract = {Cet ouvrage illustre les grands concepts des probabilit{\'e}s et de la statistique math{\'e}matique pr{\'e}sent{\'e}s dans l'Introduction au calcul des probabilit{\'e}s et {\`a} la statistique, avec des exercices de mod{\'e}lisation et de manipulation : variables al{\'e}atoires, th{\'e}or{\`e}mes asymptotiques, mod{\`e}les gaussiens, r{\'e}gions de confiance, etc.},
+  langid = {french},
+  file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Delmas - 2013 - Introduction au calcul des probabilités et à la statistique  exercices, problèmes et corrections (2.pdf;/Users/steven/Zotero/storage/86CBWM2J/hal-00964983.html}
+}
+
 @book{grifoneAlgebreLineaire2024,
   title = {{Alg{\`e}bre Lin{\'e}aire}},
   author = {Grifone, Joseph},
@@ -105,4 +118,16 @@
   isbn = {978-0-429-02960-8},
   keywords = {bayesian-analysis},
   file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Chapman and Hall/CRC/2020/McElreath_2020_Statistical Rethinking.pdf}
+}
+
+@book{wassermanAllStatisticsConcise2010,
+  title = {All of {{Statistics}}: {{A Concise Course}} in {{Statistical Inference}}},
+  shorttitle = {All of {{Statistics}}},
+  author = {Wasserman, Larry},
+  year = {2010},
+  month = nov,
+  publisher = {Springer Publishing Company, Incorporated},
+  abstract = {WINNER OF THE 2005 DEGROOT PRIZE! This book is for people who want to learn probability and statistics quickly. It brings together many of the main ideas in modern statistics in one place. The book is suitable for students and researchers in statistics, computer science, data mining and machine learning. This book covers a much wider range of topics than a typical introductory text on mathematical statistics. It includes modern topics like nonparametric curve estimation, bootstrapping and classification, topics that are usually relegated to follow-up courses. The reader is assumed to know calculus and a little linear algebra. No previous knowledge of probability and statistics is required. The text can be used at the advanced undergraduate and graduate level.},
+  isbn = {978-1-4419-2322-6},
+  file = {/Users/steven/Library/Mobile Documents/com~apple~CloudDocs/Zotero/bibliography/Wasserman - 2010 - All of Statistics A Concise Course in Statistical Inference.pdf}
 }
