--- a/contents/remainders/01-linear-algebra.qmd
+++ b/contents/remainders/01-linear-algebra.qmd
@@ -212,3 +212,8 @@ $$\text{tr}(A) = \text{tr}(P \Lambda P^{-1}) = \text{tr}(P^{-1} P \Lambda) = \te
 
 :::
 
+
+::: {.content-visible when-format="pdf"}
+## Références
+
+:::
